Uketool: fixes menu styling collapse. Fixes form for the autotweeter.

--- a/uke-tool/style.css
+++ b/uke-tool/style.css
@@ -71,7 +71,6 @@ h3 {
 
 #songs {
     list-style: none;
-    height: 0px;
 }
 
 .song-link { 
